--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ crispy-bootstrap5 = "^0.7"
 django = "^4.2.4"
 django-crispy-forms = "^2.0"
 pillow = "^10.0.0"
+django-debug-toolbar = "^4.2.0"
 
 
 [build-system]
