--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-crispy-forms = "^2.0"
 pillow = "^10.0.0"
 django-debug-toolbar = "^4.2.0"
 django-resized = "^1.0.2"
+psycopg = "^3.1.10"
 
 
 [build-system]
