--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^10.0.0"
 django-debug-toolbar = "^4.2.0"
 django-resized = "^1.0.2"
 psycopg = "^3.1.10"
+psycopg-binary = "^3.1.10"
 
 
 [build-system]
