--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,14 @@ psycopg = "^3.1.10"
 psycopg-binary = "^3.1.10"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.1"
+pytest-django = "^4.5.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "simpleBlog.settings"
+python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
