--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-debug-toolbar = "^4.2.0"
 django-resized = "^1.0.2"
 psycopg = "^3.1.10"
 psycopg-binary = "^3.1.10"
+django-hcaptcha-field = "^1.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
