--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,5 +27,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "simpleBlog.settings"
+DJANGO_SETTINGS_MODULE = "simpleBlog.settings.dev"
 python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
