--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ pytest = "^7.4.1"
 pytest-django = "^4.5.2"
 model-bakery = "^1.15.0"
 django-debug-toolbar = "^4.2.0"
+pytest-watch = "^4.2.0"
+
+[tool.poetry.group.prod.dependencies]
+gunicorn = "^21.2.0"
 
 [build-system]
 requires = ["poetry-core"]
