--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 8000:8000
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-    restart: on-failure
+    restart: always
     depends_on:
       - db
       - maildev
