--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile.prod
     ports:
       - 8000:8000
-    command: sh -c "python manage.py migrate && gunicorn -b 0.0.0.0:8000 simpleBlog.wsgi"
+    command: sh -c "python manage.py migrate && python manage.py collectstatic && gunicorn -b 0.0.0.0:8000 simpleBlog.wsgi"
     restart: on-failure
     depends_on:
       - db
@@ -24,12 +24,5 @@ services:
       POSTGRES_DB: simple_blog
     volumes:
       - pgdata-prod:/var/lib/postgresql/data
-  # TODO: real mail
-  maildev: 
-    image: maildev/maildev:2.1.0
-    ports:
-      - 1025:1025
-      - 1080:1080
-    restart: always
 volumes:
   pgdata-prod:
