--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -11,6 +11,6 @@ ENV POETRY_VIRTUALENVS_CREATE=false
 
 COPY poetry.lock pyproject.toml ./
 
-RUN /root/.local/share/pypoetry/venv/bin/poetry install --compile --without dev
+RUN /root/.local/share/pypoetry/venv/bin/poetry install --compile --without dev --all-extras
 
 COPY . .
