--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ pytest-watch = "^4.2.0"
 
 [tool.poetry.group.prod.dependencies]
 gunicorn = "^21.2.0"
-whitenoise = "^6.5.0"
+whitenoise = {extras = ["brotli"], version = "^6.5.0"}
+dj-database-url = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core"]
