--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,6 +11,6 @@ ENV POETRY_VIRTUALENVS_CREATE=false
 
 COPY poetry.lock pyproject.toml ./
 
-RUN /root/.local/share/pypoetry/venv/bin/poetry install --all-extras
+RUN /root/.local/share/pypoetry/venv/bin/poetry install --all-extras --compile --without prod
 
 COPY . .
