--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -14,3 +14,5 @@ COPY poetry.lock pyproject.toml ./
 RUN /root/.local/share/pypoetry/venv/bin/poetry install --all-extras --compile --without prod
 
 COPY . .
+
+CMD sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
