--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,3 +14,5 @@ COPY poetry.lock pyproject.toml ./
 RUN /root/.local/share/pypoetry/venv/bin/poetry install --compile --without dev --all-extras
 
 COPY . .
+
+CMD sh -c "python manage.py migrate && python manage.py collectstatic && gunicorn -b 0.0.0.0:8000 simpleBlog.wsgi"
