--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -15,4 +15,4 @@ RUN /root/.local/share/pypoetry/venv/bin/poetry install --compile --without dev 
 
 COPY . .
 
-CMD sh -c "python manage.py migrate && python manage.py collectstatic && gunicorn -b 0.0.0.0:8000 simpleBlog.wsgi"
+CMD sh -c "python manage.py migrate && python manage.py collectstatic --no-input && gunicorn -b 0.0.0.0:8000 simpleBlog.wsgi"
