--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest-django = "^4.5.2"
 model-bakery = "^1.15.0"
 django-debug-toolbar = "^4.2.0"
 pytest-watch = "^4.2.0"
+ruff = "^0.6.3"
 
 [tool.poetry.group.prod.dependencies]
 gunicorn = "^21.2.0"
