--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,42 +1,59 @@
-version: "3.8"
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile.dev
+    restart: always
     ports:
       - 8000:8000
+    depends_on:
+      - db
+      - maildev
+    develop:
+      watch:
+        - action: sync
+          path: ./
+          target: /app/
+          ignore:
+            - .venv/
+        - action: rebuild
+          path: pyproject.toml
+
+  pytest-watch:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    command: ptw
     restart: always
     depends_on:
       - db
       - maildev
-    volumes:
-      - .:/app
+    develop:
+      watch:
+        - action: sync
+          path: ./
+          target: /app/
+          ignore:
+            - .venv/
+        - action: rebuild
+          path: pyproject.toml
+
   db:
-    image: postgres:15.4-alpine3.18
+    image: postgres:16-alpine
+    restart: always
     ports:
       - 5432:5432
-    restart: always
     environment:
       POSTGRES_PASSWORD: mysecretpassword
       POSTGRES_DB: simple_blog
     volumes:
-      - pgdata-dev:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
+
   maildev:
-    image: maildev/maildev:2.1.0
+    image: maildev/maildev
+    restart: always
     ports:
-      - 1025:1025
       - 1080:1080
-    restart: always
-  ptw:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    command: pytest-watch
-    restart: always
-    depends_on:
-      - app
-    volumes:
-      - .:/app
+
 volumes:
-  pgdata-dev:
+  db-data:
