--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,18 +1,28 @@
-FROM python:3.11.5-alpine3.18
+FROM python:3.12-alpine
 
-RUN adduser -S app
-RUN addgroup app && addgroup app app
+ENV PYTHONDONTWRITEBYTECODE=1 \
+  PYTHONUNBUFFERED=1 \
+  POETRY_VIRTUALENVS_CREATE=false \
+  POETRY_NO_INTERACTION=1 \
+  POETRY_HOME='/usr/local' \
+  POETRY_VERSION=1.8.3 \
+  DJANGO_SETTINGS_MODULE=simpleBlog.settings.prod
+
+RUN apk add curl gcc python3-dev musl-dev linux-headers libmagic
+RUN curl -sSL https://install.python-poetry.org | python3 -
 
 WORKDIR /app
 
-RUN apk add curl
-RUN curl -sSL https://install.python-poetry.org | python3 - --version 1.6.1
-ENV POETRY_VIRTUALENVS_CREATE=false
-
 COPY poetry.lock pyproject.toml ./
 
-RUN /root/.local/share/pypoetry/venv/bin/poetry install --compile --without dev --all-extras
+RUN poetry install --without dev --compile --no-root
 
 COPY . .
 
-CMD sh -c "python manage.py migrate && python manage.py collectstatic --no-input && python manage.py seed_db && gunicorn -b 0.0.0.0:8000 simpleBlog.wsgi"
+RUN python manage.py collectstatic --no-input
+
+RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
+
+USER appuser
+
+CMD ["sh", "-c", "python manage.py migrate && gunicorn -b 0.0.0.0:8000 --workers 8 simpleBlog.wsgi"]
